Fix #213: Fototoon stop button icon
Changed min-width so icons will only hide when screen size becomes too small.

--- a/activities/Fototoon.activity/css/activity.css
+++ b/activities/Fototoon.activity/css/activity.css
@@ -3,7 +3,6 @@
 
 .toolbar {
   padding: 0 30px !important;
-
 }
 
 .palette .wrapper {
@@ -14,65 +13,66 @@
    display: none !important;
 }
 
-
 #image-save, #previous-button, #next-button, #add-button, #add-globe, #text-button, #sort-button, #clean-all-button {
   display: none;
 }
 
-@media only screen and (min-width: 300px) {
+@media only screen and (min-width: 250px) {
   #text-button {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 300px) {
+@media only screen and (min-width: 290px) {
   #image-save {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 340px) {
+@media only screen and (min-width: 330px) {
   #add-button {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 390px) {
   #add-globe {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 800px) {
+@media only screen and (min-width: 440px) {
   #previous-button {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 500px) {
   #sort-button {
     display: inline-block;
   }
 }
 
-@media only screen and (min-width: 1000px) {
+@media only screen and (min-width: 550px) {
   #next-button {
     display: inline-block;
-  }
-  
+  } 
 }
 
-@media only screen and (min-width: 1081px) {
+@media only screen and (min-width: 610px) {
   #clean-all-button {
     display: inline-block;
-  }
+  } 
+}
+
+@media only screen and (min-width: 690px) {
    .splitbar {
     display: inline-block !important;
   }
-  
 }
 
 /****/
+
 
 #main-toolbar #activity-button {
   background-image: url(../activity/fototoon.svg);
